@@ -13,7 +13,7 @@ example.cfg
 .coverage
 nosetests.xml
 xunit.xml
-support/cover/index.html
+support/cover/*
 _env
 doc/.build
 dist
