@@ -6,6 +6,12 @@ deps= coverage >=3.3
 commands=
   python selftest.py []
 
+# tox -e oldcov to spot check 2.x version of coverage. However, there is a
+# doctest that will fail (currently)
+[testenv:oldcov]
+basepython=python2.6
+deps= coverage < 3
+
 [testenv:docs]
 basepython=python
 changedir=doc
