@@ -1,5 +1,7 @@
 1.0.1
 
+- Code coverage plugin now uses native HTML generation when coverage 3 is
+  installed (#264). Thanks to Timothee Peignier for the patch.
 - Xunit plugin now shows test run time in fractions of a second (#317)
 - @attr (from nose.plugins.attrib) can now be used as a class decorator (#292)
 - Fixed problems with SkipTest in Python 3.2 (#389)
